[tool.poetry]
name = "dbtcore-bigquery"
version = "0.1.0"
description = "somente o repositorio do workshop"
authors = ["André Mendes Nunes <branco.de@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
dbt-core = "^1.10.15"
dbt-bigquery = "^1.10.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"
sqlfluff = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
